2010-01-14  Simon Hausmann  <simon.hausmann@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Update Symbian .def symbol export files after private API additions.

        * symbian/bwins/QtWebKitu.def:
        * symbian/eabi/QtWebKitu.def:

2010-01-13  Darin Adler  <darin@apple.com>

        Reviewed by Dan Bernstein.

        Move more of the selection and caret painting code from Frame to SelectionController.
        https://bugs.webkit.org/show_bug.cgi?id=33619

        * Api/qwebpage.cpp:
        (QWebPagePrivate::inputMethodEvent): Seems possibly wrong to be directly invoking this
        setCaretVisible here, but I updated it to call it in its new location.

2010-01-11  Simon Hausmann  <simon.hausmann@nokia.com>

        Reviewed by Holger Freyther.

        [Qt] Add private API for QWebFrame scrolling, to maintain binary compatibility with Qt 4.6.

        This is just a temporary addition until we have introduced #ifdefs to allow
        safely removing the private API again.

        * Api/qwebframe.cpp:
        (qtwebkit_webframe_scrollRecursively):

2010-01-10  Robert Hogan  <robert@roberthogan.net>

        Reviewed by Adam Barth.

        [Qt] Add enableXSSAuditor support to QWebSettings and DRT.

        https://bugs.webkit.org/show_bug.cgi?id=33419

        * Api/qwebsettings.cpp:
        (QWebSettingsPrivate::apply):
        * Api/qwebsettings.h:

2010-01-09  Daniel Bates  <dbates@webkit.org>

        No review, rolling out r53044.
        http://trac.webkit.org/changeset/53044
        https://bugs.webkit.org/show_bug.cgi?id=33419
        
        We need to look into this some more because the Qt
        bot is failing the XSSAuditor tests. See bug #33419
        for more details.

        * Api/qwebsettings.cpp:
        * Api/qwebsettings.h:

2010-01-09  Daniel Bates  <dbates@webkit.org>

        Reviewed by Adam Barth.

        https://bugs.webkit.org/show_bug.cgi?id=33419
